# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1125 2009/12/31 12:25:45 mn Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/12/31) Added cpan module for JSON support (version 2.16), removed JSON function from LayoutAJAX
    and changed all function calls to the new JSON wrapper.
 - (2009/12/24) Themes are now stored in SysConfig under Frontend::Themes rather
    than in the database. This to enable administrators to add a new theme by
    just modifying SysConfig instead of having to use mysql or isql or so.
 - (2009/12/23) Renamed inconsistent module name Kernel::System::Config to
    Kernel::System::SysConfig.
 - (2009/12/23) Added support for multiple Kernel::System::Ticket::Custom
    backends. Can now be defined via config key 'Ticket::CustomModule', e. g.

    <ConfigItem Name="Ticket::CustomModule###001-CustomModule" Required="0" Valid="0">
        <Description Lang="en">A module with custom functions to redefine ....</Description>
        <Description Lang="de">Ein Modul mit angepassten Funktionen das ...</Description>
        <Group>Ticket</Group>
        <SubGroup>Core::Ticket</SubGroup>
        <Setting>
            <String Regex="">Kernel::System::Ticket::Custom</String>
        </Setting>
    </ConfigItem>

 - (2009/12/21) Added the ability to hide the Queue, SLA and/or Service in
    the Customer interface.
 - (2009/12/15) Changed rich text editor from FCKEditor 2.6.4.1 to CKEditor 3.0.1
 - (2009/12/14) Fixed bug#4660 - Admin Notification module does not send mail
    to customer users in groups.
 - (2009/12/14) Added the ability to use AdminEmail to send notifications based
    on roles.
 - (2009/12/14) Updated SysConfig to make sure OTRS toolbars and Admin section uses