@@ -1,8 +1,8 @@
 # --
 # Kernel/System/Web/Request.pm - a wrapper for CGI.pm or Apache::Request.pm
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: Request.pm,v 1.33 2009/11/25 23:13:23 mh Exp $
+# $Id: Request.pm,v 1.34 2010/01/04 13:13:32 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,7 +17,7 @@ use warnings;
 use Kernel::System::CheckItem;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.33 $) [1];
+$VERSION = qw($Revision: 1.34 $) [1];
 
 =head1 NAME
 
@@ -233,9 +233,15 @@ internal function for GetUploadAll()
 sub GetUploadInfo {
     my ( $Self, %Param ) = @_;
 
-    return 'application/octet-stream' if !$Self->{Query}->uploadInfo( $Param{Filename} );
-
-    return $Self->{Query}->uploadInfo( $Param{Filename} )->{ $Param{Header} };
+    my $ContentType = 'application/octet-stream';
+    if (
+        $Self->{Query}->uploadInfo( $Param{Filename} )
+        && $Self->{Query}->uploadInfo( $Param{Filename} )->{ $Param{Header} }
+        )
+    {
+        $ContentType = $Self->{Query}->uploadInfo( $Param{Filename} )->{ $Param{Header} };
+    }
+    return $ContentType;
 }
 
 =item GetUploadAll()
@@ -379,6 +385,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.33 $ $Date: 2009/11/25 23:13:23 $
+$Revision: 1.34 $ $Date: 2010/01/04 13:13:32 $
 
 =cut
