@@ -1,8 +1,8 @@
 # --
 # CHANGES - change log of OTRS
-# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1125 2009/12/31 12:25:45 mn Exp $
+# $Id: CHANGES,v 1.1126 2010/01/04 13:13:32 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -159,6 +159,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.6 (2009/??/??)
+ - (2010/01/04) Fixed bug#4704 - Package Manager: upload install fails with
+    "Message: Need ContentType!" with Google Chrome browser.
  - (2009/12/30) Added Ukrainian language translation, thanks to Belskii Artem!
  - (2009/12/30) Added proper removal of FormID in AgentTicketPhoneOutbound.
  - (2009/12/23) Fixed bug#3526 - Escalation emails are resent over and over again.
